添加视频播放

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -17,6 +17,9 @@ $dark: #2c2c2c;
 $btn-focus-box-shadow: none !important;
 $danger: #ff5a00;
 $dark: #2c2c2c;
+$modal-backdrop-bg: transparent;
+$modal-header-border-width: 0;
+$modal-inner-padding: 0;
 
 $grid-breakpoints: (
   xs: 0,
