--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -7,18 +7,13 @@
 html {
   box-sizing: border-box;
   min-height: 100%;
-  font-family: 'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI',
-    Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-}
-
-body {
-  margin: 0;
-  color: $body-color;
 }
 
 a {
@@ -28,8 +23,7 @@ a {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
-a:hover,
-.nuxt-link-active {
+a:hover {
   color: #ff5a00;
 }
 
@@ -58,6 +52,11 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+body {
   margin: 0;
+}
+
+video {
+  outline: none;
 }
